style/login.css
body{
    width: 100vw;
    height: 100vh;

    background-color: #f0f0f0;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
    overflow-y: hidden;
}

header{
    width: 100%;
    height: 104px;
    border-bottom: solid 1px;
    box-sizing: border-box;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

header>h1{
    cursor: pointer;

    font-family: Sandoll GogoRound;
    font-size: 32px;
    font-weight: 400;
    line-height: 32px;
    text-align: center;
}

main{
    width: 100%;
    /* height: 100%; */
    height: calc(100vh - 104px);

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.mainWrap{
    width: 60%;
    height: 60%;
    box-sizing: border-box;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.mainWrap > h2{
    font-family: Pretendard;
    font-size: 32px;
    font-weight: 700;
    line-height: 38.19px;
    text-align: center;
}

.mainWrap--loginForm{
    box-sizing: border-box;
    margin-top: 80px;
}

.mainWrap--loginForm--formItems{
    display: flex;
    flex-direction: column;
    /* justify-content: space-between; */
    gap: 7px;
}

.mainWrap--loginForm--formItems>label{
    font-family: Pretendard;
    font-size: 15px;
    font-weight: 700;
    line-height: 17.9px;
    text-align: left;
}

.mainWrap--loginForm--formItems>input{
    width: 355px;
    height: 33px;

    font-family: Pretendard;
    font-size: 14px;
    font-weight: 400;
    line-height: 16.71px;
    text-align: left;

    background-color: #F4F5F7;
}

.helper-text{
    width: 100%;
    height: 15px;

    font-family: Inter;
    font-size: 12px;
    font-weight: 400;
    line-height: 14.52px;
    text-align: left;

    color: #FF0000;
}

.mainWrap--loginForm--formItems > button{
    width: 355px;
    height: 33px;
    
    border: none;
    border-radius: 4px;

    background-color: #ACA0EB;
    color: #FFFFFF;
}

#lottie-container {
    display: none; /* 기본적으로 숨김 */
    position: fixed; /* 화면에 고정 */
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); /* 화면 중앙 정렬 */
    z-index: 10; /* 다른 요소 위에 표시 */
    width: 300px; /* 원하는 크기 */
    height: 300px;
    background-color: rgba(255, 255, 255, 0.8); /* 반투명 배경 (옵션) */
    border-radius: 10px; /* 모서리 둥글게 (옵션) */
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* 그림자 효과 (옵션) */
}

#joinBox{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

    gap: 5px;

    box-sizing: border-box;
    margin-top: 15px;
}

#joinBox > a{
    text-decoration: none; /* 밑줄 제거 */
    color: #000;
}


#joinBox > a:visited {
    font-family: Pretendard;
    font-size: 14px;
    font-weight: 400;
    line-height: 16.71px;
    text-align: left;
}

/* 토스트 메시지 스타일 */
.toast {
    position: fixed;
    bottom: 50px;
    left: 50%;
    transform: translateX(-50%);
    background-color: #323232;
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.5s, visibility 0.5s;
}

/* 토스트 메시지가 보이는 상태 */
.toast.show {
    opacity: 1;
    visibility: visible;
}

